Category: Rendering
Older GLSL projects using multiple uv channels and texture channels are glitchy and not loading correctly.
UV coord's glitch on 2nd layer using 2nd set of UV coord's.
Attached blend. Unticking layer1 in textures and pressing play will only display layer 2 with layer 1's texture coordinates.